--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     ports:
       - "8083:8083"
       - "8086:8086"
-    volumes:
-      - /home/core/volumes/influxdb:/var/lib/influxdb
     restart: always
 
   grafana:
@@ -24,6 +22,6 @@ services:
     image: telegraf
     network_mode: "host"
     volumes:
-      - /home/core/conf/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf
-      - /var/run/docker.sock:/var/run/docker.sock
+      - "./telegraf.conf:/etc/telegraf/telegraf.conf"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     restart: always
