--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,8 @@ services:
 
   telegraf:
     container_name: telegraf
-    image: telegraf
+    image: devopsevd/telegraf_devops:latest
     network_mode: "host"
     volumes:
-      - "./telegraf.conf:/etc/telegraf/telegraf.conf"
-      - "/var/run/docker.sock:/var/run/docker.sock"
+        - "/var/run/docker.sock:/var/run/docker.sock"
     restart: always
