--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,6 @@ services:
     image: devopsevd/telegraf_devops:latest
     network_mode: "host"
     volumes:
+        - "./telegraf.conf:/etc/telegraf/telegraf.conf"
         - "/var/run/docker.sock:/var/run/docker.sock"
     restart: always
