--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - "8083:8083"
       - "8086:8086"
+    volumes:
+      - /home/ubuntu/volumes/influxdb:/var/lib/influxdb
     restart: always
 
   grafana:
