--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8083:8083"
       - "8086:8086"
     volumes:
-      - /home/ubuntu/volumes/influxdb:/var/lib/influxdb
+      - "/home/ubuntu/volumes/influxdb:/var/lib/influxdb"
     restart: always
 
   grafana:
